fix colour contrast issues with css

--- a/src/spec/css/epub-spec.css
+++ b/src/spec/css/epub-spec.css
@@ -11,6 +11,9 @@ body {
     background-color: rgb(253,253,253);
 }
 
+a {
+    color: #0000c4;
+}
 
 /***************************************************/
 /*   document prelim                               */
@@ -228,32 +231,33 @@ section.toc, section#sotd {
 section.toc  ol {
     list-style-type: none;
 }
-section.toc > ol > li > span > a {
-    color: #0000ff
+section.toc > ol > li > span > a,
+section.toc > ol > li > a {
+    color: #0000d8
 }
 section.toc > ol > li > ol > li > span > a {
-    color: #0033ff
+    color: #0000ff
 }
 section.toc > ol > li > ol > li > ol > li > span > a {
     font-size: .9em;
-    color: #0066ff;
+    color: #0000ff
 }
 section.toc > ol > li > ol > li > ol > li > ol > li >span > a {
     font-size: .9em;
-    color: #0099ff
+    color: #0000ff
 }
 section.toc > ol > li > ol > li > ol > li > ol > li > ol > li > span > a {
     font-size: .9em;
-    color: #0099ff
+    color: #0000ff
 }
 section.toc > ol > li > ol > li > ol > li > ol > li > ol > li > ol > li > span > a {
     font-size: .9em;
-    color: #0099ff
+    color: #0000ff
 }
 
 section.toc > ol > li > ol > li > ol > li > ol > li > ol > li > ol > li > ol > li >span > a {
     font-size: .9em;
-    color: #0099ff
+    color: #0000ff
 }
 
 
@@ -266,7 +270,7 @@ dl dt {
 }
 
 dt span.term {
-    color: #005A9C;
+    color: #000c9c;
     font-weight: normal;
     font-style: italic;
 }
@@ -370,7 +374,7 @@ code, span.property, a.codelink {
 
 div.elem-synopsis {
     border-left: 5px solid rgb(145,200,255);
-    background-color: rgb(221,238,255);
+    background-color: rgb(236,246,255);
     padding: 2px 1em;
 	margin-bottom: 2em;
 }
@@ -483,16 +487,15 @@ div.issue > h6 {
 a.glossterm {
     color: black;
     text-decoration: none;
-    border-bottom : 1px dotted rgb(0,0,255);
+    border-bottom : 1px dotted #0000c4;
 }
 a.biblioref {
-    color: #0000FF;
+    color: #0000c4;
     text-decoration: none;
 }
 a.glossterm:hover, a.biblioref:hover {
     text-decoration: underline;
-    background-color: white;
-    color: #0000FF;
+    color: #0000c4;
 }
 
 
@@ -590,7 +593,7 @@ div.informaltable > table {
 
 div.informaltable > table td, div.informaltable > table th {
   border: none;
-  background-color: rgb(221,238,255);
+  background-color: rgb(236,246,255);
   color: rgb(0,0,0);
 }
 
@@ -671,18 +674,24 @@ table#tbl-nspfx {
 /****************************************************/
 
 
+table.productionset {
+    border: none;
+    border-left: 5px solid rgb(145,200,255);
+    background-color: rgb(236,246,255);
+}
+
 table.productionset tbody tr {
     border: none;
 }
 
 table.productionset tbody tr td {
     border: none;
-    border-bottom: 1px solid #CCC;
+    border-bottom: 1px solid #ddd;
 }
 
 table.productionset tbody tr td a {
     text-decoration: none;
-    border-bottom: 1px dotted #0000ff;
+    border-bottom: 1px dotted #000090;
 }
 
 table.productionset tbody tr td a:hover {
@@ -692,7 +701,7 @@ table.productionset tbody tr td a:hover {
 table.productionset tbody tr td a:visited,
 table.productionset tbody tr td a:active,
 table.productionset tbody tr td a:hover {
-    color: #0000ff;
+    color: #000090;
 }
 
 
@@ -706,21 +715,21 @@ code {
 }
 
 code.markup, code.property, code.value, code.codepoint, code.filename, code.media-type, code.datatype, code.var, code.markup > a, code.markup > span.phrase > a.link, div.informalexample > p > code {
-    color: rgb(217,59,0);
+    color: #8d2600;
 }
 
 a.markup, a.property, a.value, a.codepoint, a.filename, a.media-type, a.datatype {
-    color: rgb(217,59,0);
+    color: #8d2600;
 }
 
 code.code-link {
-    color: rgb(217,59,0);
+    color: #8d2600;
     text-decoration: underline;
 }
 
 span.literal, span.property, span.property > a, span.property > span.phrase > a.link {
     font-family: monospace;
-    color: rgb(217,59,0);
+    color: #8d2600;
 }
 
 code.option {
